--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,10 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "update:songs": "node data/songs.js",
+    "update:albums": "node data/albums.js"
+
   },
   "type": "module",
   "author": "",
