--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,6 @@
     "dev": "nodemon index.js",
     "update:songs": "node data/songs.js",
     "update:albums": "node data/albums.js"
-
   },
   "type": "module",
   "author": "",
@@ -20,7 +19,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-fileupload": "^1.5.1",
-    "mongoose": "^8.8.3"
+    "mongoose": "^8.8.3",
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
