--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,10 +1,8 @@
 {
-  "version": 2,
-  "builds": [{
-      "src": "./index.js",
-      "use": "@vercel/node"
-    }],
-  "routes": [
-    { "src": "/(.*)", "dest": "/" }
-  ]
+  "version": 2,  
+   "functions": {
+    "api/*.js": {
+      "maxDuration": 60
+    }
+  }
 }
