changes in package.json and vercel.json

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,5 +1,8 @@
 {
-  "version": 2,  
+  "version": 2,
+  "routes": [
+    { "src": "/(.*)", "dest": "/" }
+  ],  
    "functions": {
     "api/*.js": {
       "maxDuration": 60
